Lectures: use a DTO for the lecture unit order endpoint
Return List<LectureUnitDTO> from updateLectureUnitsOrder via a new
polymorphic LectureUnitDTO.of(...) dispatcher that maps each unit to its
matching DTO subtype. getLectureUnitById stays on the entity for now (its
learning-path client needs the unit's lecture/course and, for exercise
units, the full dashboard exercise graph). Lower the return threshold to 2.